update mytests testcase with camera acquire and configuration
added testapp files capture2.cpp, capture3.cpp and capture4.cpp

--- a/test/mytests/meson.build
+++ b/test/mytests/meson.build
@@ -3,7 +3,11 @@
 # Tests are listed in order of complexity.
 # They are not alphabetically sorted.
 camera_tests = [
-    [ 'capture',                'capture1.cpp' ],	#Create cameramanager, start camera
+#    [ 'capture',                'capture1.cpp' ],	#Create cameramanager, start camera
+#    [ 'capture',                'capture2.cpp' ],	#+ stop camera
+#    [ 'capture',                'capture3.cpp' ],	#+ get camera ID, Acquire camera
+    [ 'capture',                'capture4.cpp' ],	#+ configure camera default settings and validate, stop camera
+
 ]
 
 foreach t : camera_tests
