tests/mytests: added capture6.cpp with camera capture
Added below code snippets:
Frame capture request creation.
Enable signal and slot mechanism.
Start Capturing .i.e., prepare buffers and  start queuing them.
Start Event displatcher for listening events and set timer signals.

--- a/test/mytests/meson.build
+++ b/test/mytests/meson.build
@@ -7,7 +7,8 @@ camera_tests = [
 #    [ 'capture',                'capture2.cpp' ],	#+ stop camera
 #    [ 'capture',                'capture3.cpp' ],	#+ get camera ID, Acquire camera
 #    [ 'capture',                'capture4.cpp' ],	#+ configure camera default settings and validate, stop camera
-    [ 'capture',                'capturei5.cpp' ],	#+ Allocate buffers
+#    [ 'capture',                'capture5.cpp' ],	#+ Allocate buffers
+    [ 'capture',                'capture6.cpp' ],	#+ Frame capure request creation, Enable signal & slot, start capturing data, start eventdispatcher for event notications
 
 ]
 
